fixing the scrol visibility

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,8 @@
   font-family: "Roboto", sans-serif;
   font-family: "Zilla Slab", serif;
   text-decoration: none;
+  scroll-behavior: smooth;
+  overflow-y: hidden;
 }
 .body {
   overflow: hidden;
